<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.enricogiurin.vocabulary</groupId>
	<artifactId>vocabulary-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Vocabulary API</name>
	<description>Backend API for Vocabulary</description>
	<organization>
		<name>Vocabulary Team</name>
		<url>https://github.com/vocabulary</url>
	</organization>
	<developers>

		<developer>
			<id>egch</id>
			<name>Enrico Giurin</name>
			<email>enricogiurin@gmail.com</email>
			<url>https://github.com/egch</url>
			<roles>
				<role>architect</role>
			</roles>
			<timezone>Europe/Rome</timezone>
			<properties>
				<picUrl>https://avatars.githubusercontent.com/u/11061018?v=4</picUrl>
			</properties>
		</developer>
	</developers>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/egch/vocabulary/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:https://github.com/egch/vocabulary.git</connection>
		<developerConnection>scm:git:git@github.com:egch/vocabulary.git</developerConnection>
		<url>https://github.com/egch/vocabulary</url>
	</scm>
	<inceptionYear>2024</inceptionYear>
	<url>https://github.com/egch/vocabulary</url>
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<your-rents.version>0.0.4</your-rents.version>
		<building.db.username>vocabulary</building.db.username>
		<building.db.password>vocabulary</building.db.password>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.5.0</version>
				<configuration>
					<verbose>false</verbose>
					<addSvnKeyWords>false</addSvnKeyWords>
					<licenseName>apache_v2</licenseName>
					<licenseFile>${basedir}/LICENSE</licenseFile>
				</configuration>
				<executions>
					<execution>
						<id>update-license-headers</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>apache_v2</licenseName>
							<excludes>
								<exclude>**/*.json</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.gmaven</groupId>
				<artifactId>groovy-maven-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<?m2e execute onConfiguration?>
						<id>start-db</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>execute</goal>
						</goals>
						<configuration>
							<source>
								db = new org.testcontainers.containers.PostgreSQLContainer("postgres:15-alpine")
									.withUsername("${building.db.username}")
									.withDatabaseName("postgres")
									.withPassword("${building.db.password}");
								db.start();
								project.properties.setProperty('building.db.url', db.getJdbcUrl());
							</source>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.testcontainers</groupId>
						<artifactId>postgresql</artifactId>
						<version>1.20.4</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<executions>
					<execution>
						<?m2e execute onConfiguration?>
						<id>db-migration-global</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>migrate</goal>
						</goals>
						<configuration>
							<url>${building.db.url}</url>
							<user>${building.db.username}</user>
							<password>${building.db.password}</password>
							<createSchemas>true</createSchemas>
							<schemas>
								vocabulary
							</schemas>
							<locations>
								<location>
									filesystem:${project.basedir}/src/main/resources/db/migration
								</location>
							</locations>
						</configuration>
					</execution>

				</executions>
			</plugin>

			<plugin>
				<groupId>org.jooq</groupId>
				<artifactId>jooq-codegen-maven</artifactId>
				<executions>
					<execution>
						<?m2e execute onConfiguration?>
						<id>java-generator-global</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<jdbc>
								<url>${building.db.url}</url>
								<user>${building.db.username}</user>
								<password>${building.db.password}</password>
							</jdbc>
							<generator>
								<database>
									<name>org.jooq.meta.postgres.PostgresDatabase</name>
									<includes>.*</includes>
									<excludes>flyway_schema_history</excludes>
									<inputSchema>vocabulary</inputSchema>
									<outputSchema>vocabulary</outputSchema>

									<forcedTypes>
										<forcedType>
											<userType>org.enricogiurin.vocabulary.api.model.Language</userType>
											<converter>org.enricogiurin.vocabulary.api.model.LanguageConverter</converter>
										<!--	<enumConverter>true</enumConverter>-->
											<includeExpression>.*\.language</includeExpression>
										</forcedType>
										<forcedType>
											<userType>org.enricogiurin.vocabulary.api.model.Language</userType>
											<converter>org.enricogiurin.vocabulary.api.model.LanguageConverter</converter>
										<!--	<enumConverter>true</enumConverter>-->
											<includeExpression>.*\.language_to</includeExpression>
										</forcedType>
									</forcedTypes>


								</database>
								<target>
									<packageName>org.enricogiurin.vocabulary.api.jooq.vocabulary</packageName>
									<directory>target/generated-sources/jooq</directory>
								</target>
							</generator>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<image>
						<name>vocabulary/vocabulary-api:latest</name>
					</image>
				</configuration>
			</plugin>


		</plugins>
	</build>


	<dependencies>
		<!-- your-rents dependencies -->

		<dependency>
			<groupId>com.your-rents.services</groupId>
			<artifactId>your-rents-services-common-util</artifactId>
			<version>${your-rents.version}</version>
		</dependency>

		<dependency>
			<groupId>com.your-rents.services</groupId>
			<artifactId>your-rents-services-common-searchable</artifactId>
			<version>${your-rents.version}</version>
		</dependency>

		<!-- spring dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jooq</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.7.0</version>
			<optional>true</optional>
		</dependency>

		<!-- other dependencies -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>

		<dependency>
			<artifactId>lombok</artifactId>
			<groupId>org.projectlombok</groupId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-admin-client</artifactId>
			<version>26.0.6</version>
		</dependency>


		<!-- test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.dasniko</groupId>
			<artifactId>testcontainers-keycloak</artifactId>
			<version>3.4.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

</project>